change restart button name

--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -2,7 +2,7 @@
 
 <button (click)="playgame(name)">Play</button>
 
-<button (click)="removeData()">Remove</button>
+<button (click)="removeData()">Restart game</button>
 <div><h2>Rounds played: {{
     getRoundsNumber()
     }}</h2></div>
